--- a/public/html/img-adicionales.html
+++ b/public/html/img-adicionales.html
@@ -12,7 +12,7 @@
         <div id="imagenes" class="row"></div>
     </div>
 
-    <script src="../helpers/img-extras.js">
+    <script src="../js/img-extras.js">
         
     </script>
 </body>
