--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,12 @@
     <div id="errorSeleccion" class="alert alert-danger text-center mt-3" role="alert" style="display: none;">
         <h3>Debes seleccionar al menos un filtro para ejecutar una búsqueda.</h3>
     </div>
+    <div class="d-flex justify-content-between align-items-center mt-3">
+        <button id="btnAnterior" class="btn btn-primary mx-5" style="display: none;">Anterior</button>
+        <div style="flex-grow: 1;"></div> <!-- Espaciador flexible -->
+        <button id="btnSiguiente" class="btn btn-primary mx-5" style="display: none;">Siguiente</button>
+    </div>
+    
     
     <script type="module" src="./index.js"></script>
 </body>
