cambiando nombres js ppal

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
     </div>
     
     
-    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="./js/principal.js"></script>
 
 
 </body>
