probando cambio html

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <!-- Header -->
     <div>
         <nav class="navbar navbar-dark bg-dark d-flex justify-content-center nav">
-            Museo
+            Museo 20
         </nav>
     </div>
     <!-- Filters -->
