cambio de nombre a index.js

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
     </div>
     
     
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./principal.js"></script>
 
 
 </body>
