principal restaurado normal

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
     </div>
     
     
-    <script type="module" src="./principal.js"></script>
+    <script type="module" src="../public/principal.js"></script>
 
 
 </body>
