paginacion y volver de pagina

--- a/public/html/img-adicionales.html
+++ b/public/html/img-adicionales.html
@@ -12,7 +12,11 @@
         <div id="imagenes" class="row"></div>
     </div>
 
-    <script src="../js/img-extras.js">
+    <button id="btnVolver" class="btn btn-outline-secondary m-2">Volver</button>
+
+
+
+    <script src="../img-extras.js">
         
     </script>
 </body>
