--- a/public/html/img-adicionales.html
+++ b/public/html/img-adicionales.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imágenes Adicionales</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <div class="container">
         <h1 id="title" ></h1>
         <div id="imagenes" class="row"></div>
     </div>
-
+    <div class="espacio"></div>
     <button id="btnVolver" class="btn btn-outline-secondary m-2">Volver</button>
 
 
