estilos sombreados e imagenes

--- a/public/html/img-adicionales.html
+++ b/public/html/img-adicionales.html
@@ -13,7 +13,7 @@
         <div id="imagenes" class="row"></div>
     </div>
     <div class="espacio"></div>
-    <button id="btnVolver" class="btn btn-outline-secondary m-2">Volver</button>
+    <button id="btnVolver" class="btn btn-dark m-2">Volver</button>
 
 
 
