--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <!-- Header -->
-    <div>
+    <div >
         <nav class="navbar navbar-dark d-flex justify-content-center nav">
             Museo Metropolitano de Arte
         </nav>
@@ -41,7 +41,7 @@
                     <option value="OpcionVacio">Seleccionar</option>
                     <!-- Puedes agregar más opciones aquí -->
                 </select>
-                <button type="button" class="btn btn-outline-secondary" id="btnBuscarDepto">Buscar</button>
+                <button type="button" class="btn btn-dark" id="btnBuscarDepto">Buscar</button>
             </div>
             <div class="mb-3 d-flex align-items-center">
                 <label for="localSelect" class="form-label me-2">Buscar por Localizacion:</label>
@@ -49,14 +49,14 @@
                     <option value="OpcionVacio">Seleccionar</option>
                     <!-- Puedes agregar más opciones aquí -->
                 </select>
-                <button type="button" class="btn btn-outline-secondary" id="btnBuscarLocation">Buscar</button>
+                <button type="button" class="btn btn-dark" id="btnBuscarLocation">Buscar</button>
             </div>
             <div class="mb-3 d-flex align-items-center">
                 <label for="keywordInput" class="form-label me-2">Buscar por Palabra Clave:</label>
                 <input type="text" class="form-control me-2" id="inputPalabra" placeholder="Introduce la palabra clave">
-                <button type="button" class="btn btn-outline-secondary" id="btnBuscarPalabra">Buscar</button>
+                <button type="button" class="btn btn-dark" id="btnBuscarPalabra">Buscar</button>
             </div>  
-            <button type="submit" class="btn btn-outline-secondary filter-nested" id="btnSubmit" style="display: none;" >Buscar</button>
+            <button type="submit" class="btn btn-dark filter-nested" id="btnSubmit" style="display: none;" >Buscar</button>
         </form>
     </div>
 
