--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,10 @@
     <div id="errorSeleccion" class="alert alert-danger text-center mt-3" role="alert" style="display: none;">
         <h3>Debes seleccionar al menos un filtro para ejecutar una búsqueda.</h3>
     </div>
+    <!-- Div de error para cuando no hay resultados -->
+    <div id="errorFiltros" class="alert alert-danger text-center mt-3" role="alert" style="display: none;">
+        <h3>No se encontraron datos para su busqueda, intente con otros filtros.</h3>
+    </div>
     <!-- Botones de paginado -->
     <div class="d-flex justify-content-between align-items-center mt-3">
         <button id="btnAnterior" class="btn btn-secondary mx-5" style="display: none;">Anterior</button>
