--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,10 @@
     <div id="errorFiltros" class="alert alert-danger text-center mt-3" role="alert" style="display: none;">
         <h3>No se encontraron datos para su busqueda, intente con otros filtros.</h3>
     </div>
+    <!-- Error de carga de Vercel -->
+    <div id="errorVercel" class="alert alert-danger text-center mt-3" role="alert" style="display: none;">
+        <h3>Falla en la carga, por favor recargue la pagina.</h3>
+    </div>
     <!-- Botones de paginado -->
     <div class="d-flex justify-content-between align-items-center mt-3">
         <button id="btnAnterior" class="btn btn-secondary mx-5" style="display: none;">Anterior</button>
